generated/checkers/refine/KN-Out-of-Bound-13e788de-0/build_logs/syntax-repair-refine-1-4/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::nameHasPrefixToken(llvm::StringRef, llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:298:24: warning: ‘bool llvm::StringRef::startswith(llvm::StringRef) const’ is deprecated: Use starts_with instead [-Wdeprecated-declarations]
  298 |     return L.startswith(Prefix);
      |            ~~~~~~~~~~~~^~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:263:29: note: declared here
  263 |         "starts_with") bool startswith(StringRef Prefix) const {
      |                             ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::nameHasSuffixToken(llvm::StringRef, llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:304:22: warning: ‘bool llvm::StringRef::endswith(llvm::StringRef) const’ is deprecated: Use ends_with instead [-Wdeprecated-declarations]
  304 |     return L.endswith(Suffix);
      |            ~~~~~~~~~~^~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:278:27: note: declared here
  278 |         "ends_with") bool endswith(StringRef Suffix) const {
      |                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::ValueDecl* {anonymous}::SAGenTestChecker::getReferencedDecl(const clang::Expr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:553:46: error: invalid conversion from ‘const clang::Decl*’ to ‘const clang::ValueDecl*’ [-fpermissive]
  553 |       return DRE->getDecl()->getCanonicalDecl();
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                              |
      |                                              const clang::Decl*
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:555:51: error: invalid conversion from ‘clang::Decl*’ to ‘const clang::ValueDecl*’ [-fpermissive]
  555 |       return ME->getMemberDecl()->getCanonicalDecl();
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                   |
      |                                                   clang::Decl*
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
